# PixSeg

./: .gitignore  LICENSE  README.md  hubconf.py  pyproject.toml  technical.md
doc/: config.md  config_doc.ipynb  pytest_dataset_root.toml  requirements.txt  sample_config.toml  technical.md  usage_example.ipynb  using_hub.ipynb
scripts/: convert_h5.ipynb
src/datasets/: __init__.py  bdd100k.py  cityscapes.py  dataset_api.py  dataset_registry.py  dataset_zoo.py  explore.ipynb  pytorch_builtin.py  pytorch_datasets.py  registry.py
src/learn/: __init__.py  criteria.py  learning_zoo.py  lr_schedule.py  optimization.py  weighting.py
src/models/: __init__.py  explore.ipynb  fcn.py  model_api.py  model_registry.py  model_zoo.py  pspnet.py  pytorch_builtin.py  pytorch_models.py  registry.py
src/models/backbones/: __init__.py  backbone_utils.py  mobilenet_v3.py  resnet.py  utils.py  vgg.py
src/pipeline/: __init__.py  config.py  engine.py  logger.py  testtime.py  trainer.py
src/pixseg/datasets/: bdd100k.py  cityscapes.py  dataset_registry.py  lip.py  voc_like.py
src/pixseg/learn/: criteria.py  weighting.py
src/pixseg/models/: __init__.py  bisenet.py  deeplabv3.py  enet.py  fcn.py  lraspp.py  model_registry.py  model_utils.py  pspnet.py  sfnet.py  sfnet_lite.py  upernet.py
src/pixseg/pipeline/: __init__.py  config.py  test_time.py
src/pixseg/utils/: rng.py  visual.py
src/semantic_segmentation_toolkit/datasets/: __init__.py  ade20k.py  bdd100k.py  cityscapes.py  coco_stuff.py  dataset_api.py  dataset_registry.py  lip.py  mapillary.py  pytorch_datasets.py
src/semantic_segmentation_toolkit/learn/: criteria.py  lr_schedule.py  optimization.py  weighting.py
src/semantic_segmentation_toolkit/models/: __init__.py  bisenet.py  deeplabv3.py  enet.py  fcn.py  lraspp.py  model_api.py  model_registry.py  model_utils.py  pspnet.py  pytorch_models.py  sfnet.py  sfnet_lite.py  upernet.py
src/semantic_segmentation_toolkit/models/backbones/: __init__.py  mobilenet_v3.py  xception.py
src/semantic_segmentation_toolkit/pipeline/: __init__.py  engine.py  logger.py  test_time.py  testtime.py  trainer.py
src/semantic_segmentation_toolkit/utils/: metrics.py  transform.py  visual.py
src/utils/: metrics.py  transform.py  visual.py
tasks/: evaluation.ipynb  generation.ipynb  inference.ipynb  minimal_training.ipynb  simple_training.ipynb  training.ipynb
test/: test_backbones.py  test_dataset.py  test_datasets.py  test_learn.py  test_model.py  test_models.py  test_pipeline.py
